--- a/package.json
+++ b/package.json
@@ -6,25 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "update-types": "json2ts node_modules/@jsonresume/schema/schema.json ./src/types/resume-schema.ts"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "js-yaml": "^4.1.0",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
+    "@jsonresume/schema": "^1.2.1",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
+    "json-schema-to-typescript": "^15.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
