--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@jsonresume/schema": "^1.2.1",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^22",
     "@types/react": "^18",
