--- a/src/data/resume/resume.yaml
+++ b/src/data/resume/resume.yaml
@@ -14,12 +14,13 @@ work:
     startDate: "2017"
     endDate: "2024"
     location: Remote
-    description: |
+    description: >
       Automattic is the company behind WordPress.com, Jetpack and WooCommerce. I worked full time on the open source WordPress project which powers 43.5% of all websites.
     highlights:
-      - "Key contributor to [Gutenberg](https://github.com/wordpress/gutenberg), a React-based visual site editor used by ~329 million WordPress sites."
-      - "Led development of major features including the [Grid block](https://wordpress.org/documentation/article/grid-block/), [Style Book](https://developer.wordpress.org/news/2023/06/21/the-style-book-a-one-stop-shop-for-styling-block-themes/), [Widgets Editor](https://wordpress.org/documentation/article/block-based-widgets-editor/) and [reusable blocks](https://wordpress.org/documentation/article/reusable-blocks/)."
-      - "Optimised usability, accessibility, and performance of critical UI components such as the page editor, publish flow, and date picker."
+      - |
+        Key contributor to [Gutenberg](https://github.com/wordpress/gutenberg), a React-based visual site editor used by ~329 million WordPress sites.
+        - Led development of major features including the [Grid block](https://wordpress.org/documentation/article/grid-block/), [Style Book](https://developer.wordpress.org/news/2023/06/21/the-style-book-a-one-stop-shop-for-styling-block-themes/), [Widgets Editor](https://wordpress.org/documentation/article/block-based-widgets-editor/) and [reusable blocks](https://wordpress.org/documentation/article/reusable-blocks/).
+        - Optimised usability, accessibility, and performance of critical UI components such as the page editor, publish flow, and date picker.
       - "WordPress Core Committer and Editor Tech Lead for [WordPress 5.7](https://wordpress.org/news/2021/03/esperanza/) and [WordPress 5.9](https://wordpress.org/news/2022/01/josephine/). Oversaw merging of full site editing functionality into core allowing millions to edit all aspects of their site."
       - "Managed a team of 6 engineers for 17 months. Contributed to a fun and collaborative culture, conducted regular 1:1s, and provided structured feedback. During this time, the team's [CultureAmp engagement score](https://www.cultureamp.com/blog/employee-engagement-guide) increased from 58% to 95%."
       - "Actively maintained the open-source project: triaged issues, reviewed code contributions, and fostered community participation among 1,366 contributors."
@@ -28,7 +29,7 @@ work:
     startDate: "2015"
     endDate: "2017"
     location: New York, NY
-    description: |
+    description: >
       [Tumblr](https://about.tumblr.com/) is an influential social network that served 25.2 million users in 2017. I was a member of the Posts team and worked across the stack to build post creation tools.
     highlights:
       - "Led development of [Neue Post Format (NPF)](https://engineering.tumblr.com/post/164826109535/building-the-tumblr-neue-post-format), a JSON-based specification replacing HTML for Tumblr's 150+ billion posts, improving security, performance, and extensibility for mobile apps."
