--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "eslint-config-next": "14.2.15",
     "json-schema-to-typescript": "^15.0.2",
     "postcss": "^8",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
