--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "update-types": "json2ts node_modules/@jsonresume/schema/schema.json ./src/types/resume-schema.ts"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
