--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "update-types": "json2ts node_modules/@jsonresume/schema/schema.json ./src/types/resume-schema.ts"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^0.0.51",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "ai": "^3.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.9",
@@ -24,7 +26,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
-    "tailwind-merge": "^2.5.4"
+    "tailwind-merge": "^2.5.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@jsonresume/schema": "^1.2.1",
