--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "npm run generate-types && next dev",
+    "build": "npm run generate-types && next build",
     "start": "next start",
     "lint": "next lint",
-    "update-types": "json2ts node_modules/@jsonresume/schema/schema.json ./src/types/resume-schema.ts"
+    "generate-types": "json2ts node_modules/@jsonresume/schema/schema.json ./src/types/resume-schema.ts"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^0.0.51",
