--- a/package.json
+++ b/package.json
@@ -11,13 +11,22 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^0.0.51",
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@vercel/postgres": "^0.10.0",
     "ai": "^3.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.35.2",
+    "drizzle-zod": "^0.5.1",
     "framer-motion": "^11.11.9",
     "js-yaml": "^4.1.0",
     "lucide-react": "^0.453.0",
@@ -25,6 +34,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.1",
     "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8"
@@ -35,6 +45,7 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.26.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "json-schema-to-typescript": "^15.0.2",
