--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-hook-form": "^7.53.1",
     "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.5.4",
+    "voyageai": "^0.0.1-5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
