--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "drizzle-orm": "^0.35.2",
     "drizzle-zod": "^0.5.1",
     "framer-motion": "^11.11.9",
-    "js-yaml": "^4.1.0",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
@@ -56,6 +55,7 @@
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5"
+    "typescript": "^5",
+    "yaml-loader": "^0.8.1"
   }
 }
